--- a/web/index.html
+++ b/web/index.html
@@ -5,11 +5,17 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>ESP Controller</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div><H1>ESP Controller</H1></div>
+        <div>
+            <button onclick="callESP(1)">ON</button>
+            <button onclick="callESP(0)">OFF</button>
+        </div>
+        
+        <script src="js/script.js"></script>
     </body>
 </html>
